@@ -1,3 +1,7 @@
+2013-08-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* nnrss.el (nnrss-discover-feed): Indent.
+
 2013-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-util.el (gnus-emacs-completing-read): Isolate XEmacs stuff.
